--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^3.0.0",
     "next": "^12.0.1",
+    "next-sanity": "^0.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
