--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
+    "framer-motion": "^5.5.5",
     "next": "^12.0.1",
     "next-sanity": "^0.4.0",
     "react": "17.0.2",
