--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^5.5.5",
     "next": "^12.0.1",
     "next-sanity": "^0.4.0",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "url": "^0.11.0"
