--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
+    "chart.js": "^3.7.0",
     "framer-motion": "^5.5.5",
     "next": "^12.0.1",
     "next-sanity": "^0.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
     "url": "^0.11.0"
   },
