--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
     "chart.js": "^3.7.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "framer-motion": "^5.5.5",
     "next": "^12.0.1",
     "next-sanity": "^0.4.0",
