--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^3.0.0",
     "chart.js": "^3.7.0",
+    "chartjs-adapter-moment": "^1.0.0",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "downsample": "^1.4.0",
     "framer-motion": "^5.5.5",
+    "moment": "^2.29.1",
     "next": "^12.0.1",
     "next-sanity": "^0.4.0",
     "nprogress": "^0.2.0",
