--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.8",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
   }
