--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "downsample": "^1.4.0",
     "framer-motion": "^5.5.5",
     "moment": "^2.29.1",
-    "next": "^12.0.1",
+    "next": "^10.0.1",
     "next-sanity": "^0.4.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
@@ -28,6 +28,6 @@
   "devDependencies": {
     "@types/gtag.js": "^0.0.8",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "^0.2.4"
   }
 }
